Fixed spacing

--- a/index.css
+++ b/index.css
@@ -146,6 +146,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-top: 1.5rem;
 }
 
 .fade {
